--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </nav>
     </header>
     <main>
-        <div class="tapa"> <!--inactive active-->
+        <!-- <div class="tapa"> <!--inactive active
             <div  class="pokebola-prymary">
-                <img src="./img/pokebola.png" alt="pokebola" class="pokebola-1 parpadea"> <!--inactive-->
+                <img src="./img/pokebola.png" alt="pokebola" class="pokebola-1 parpadea"> <!--inactive
             </div>
-        </div>
+        </div> --> 
         <section class="pantallas-container ">
             <article class="pantalla-pokemones-card">
                 <div class="buttons-container_up">
@@ -146,9 +146,12 @@
             </article>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="64" height="64" class="pokebola-close"><path fill-rule="evenodd" d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12zm8.036-4.024a.75.75 0 00-1.06 1.06L10.939 12l-2.963 2.963a.75.75 0 101.06 1.06L12 13.06l2.963 2.964a.75.75 0 001.061-1.06L13.061 12l2.963-2.964a.75.75 0 10-1.06-1.06L12 10.939 9.036 7.976z"></path></svg>
         </section>
+
+        <section>
+            
+        </section>
     </main>
-    <div class="tapa2">
-    </div>
+
     <!-- <footer>
         
     </footer> -->
