mostrar todos los pokemones y su ide conectado a la pokedex

--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
         </section>
 
         <section>
-            
+            <h2>Pokemones</h2>
+            <ul id="pokemons"></ul>
         </section>
     </main>
 
