--- a/index.html
+++ b/index.html
@@ -149,6 +149,8 @@
 
         <section>
             <h2>Pokemones</h2>
+            <button onclick="prevPokemons()">Prev Pokemons</button>
+            <button onclick="nextPokemons()">Next Pokemons</button>
             <ul id="pokemons"></ul>
         </section>
     </main>
