--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pokedex</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/a3356dc614.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -153,7 +153,7 @@
                 <button onclick="prevPokemons()">Prev Pokemons</button>
                 <button onclick="nextPokemons()">Next Pokemons</button>
             </div>
-            <ul id="pokemons" class="container text-center cols-4"></ul>
+            <ul id="pokemons" class="container text-center"></ul>
         </section>
     </main>
 
