--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
                 <img src="./img/pokebola.png" alt="pokebola" class="pokebola-1 parpadea"> 
             </div>
         </div>  -->
-        <section class="pantallas-container ">
+        <section class="pantallas-container " >
             <article class="pantalla-pokemones-card">
+                <form class="d-flex" role="search" onsubmit='searchPokemon()'>
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
+                    <button class="btn btn-outline-success" type="submit">Search </button>
+                  </form>
                 <div class="buttons-container_up">
                     <button class="pokemon-button_up" onclick="prevImg()">
                         <i class="fa-solid fa-backward-step"></i>
@@ -61,7 +65,7 @@
                 <!-- <p>sidebar</p> -->
                 <div class="pokemon-description">
                 <div class="poke-name">
-                    Este pokemón es:<p id="name"></p>
+                    Nombre:<p class="pokemon-name" id="name"></p>
                 </div>
 
                     <p id="desc"></p>
