--- a/index.html
+++ b/index.html
@@ -151,11 +151,15 @@
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="64" height="64" class="pokebola-close"><path fill-rule="evenodd" d="M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12zm8.036-4.024a.75.75 0 00-1.06 1.06L10.939 12l-2.963 2.963a.75.75 0 101.06 1.06L12 13.06l2.963 2.964a.75.75 0 001.061-1.06L13.061 12l2.963-2.964a.75.75 0 10-1.06-1.06L12 10.939 9.036 7.976z"></path></svg>
         </section>
 
-        <section class="section-list-pokemon " >
+        <section class="section-list-pokemon" >
             <div  class="list-pokemon-header">
-                <h2>Pokemones</h2>
-                <button onclick="prevPokemons()">Prev Pokemons</button>
-                <button onclick="nextPokemons()">Next Pokemons</button>
+                <div class="logo-pokemon">
+                        <img src="./img/logo-pokemon-79x45.png" alt="logo pokemon">
+                </div>
+            </div>
+            <div class="section-list-buttons">
+                <button onclick="prevPokemons()"><i class="fa-solid fa-circle-arrow-left"></i> </button>
+                <button onclick="nextPokemons()"><i class="fa-solid fa-circle-arrow-right"></i></button>
             </div>
             <ul id="pokemons" class="container text-center"></ul>
         </section>
