--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="pantallas-container " >
             <article class="pantalla-pokemones-card">
                 <form class="d-flex" role="search" onsubmit='searchPokemon()'>
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
+                    <input class="form-control me-2" type="search" placeholder="Buscar por número de id o nombre" aria-label="Search" name="search">
                     <button class="btn btn-outline-success" type="submit">Search </button>
                   </form>
                 <div class="buttons-container_up">
