disminuir la modificación de la manipulación del DOM para mejorar el rendimiento

--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
                         <img src="./img/logo-pokemon-79x45.png" alt="logo pokemon">
                 </div>
             </div>
-            <!-- <div class="section-list-buttons">
+            <div class="section-list-buttons">
                 <button onclick="prevPokemons()"><i class="fa-solid fa-circle-arrow-left"></i> </button>
                 <button onclick="nextPokemons()"><i class="fa-solid fa-circle-arrow-right"></i></button>
-            </div> -->
+            </div>
             <ul id="pokemons" class="container text-center"></ul>
         </section>
     </main>
